hphp/hack/test/typecheck/let/let_return_error.php.exp
File "let_return_error.php", line 8, characters 10-12:
Invalid return type (Typing[4110])
File "let_return_error.php", line 6, characters 17-24:
This is an object of type Subclass
File "let_return_error.php", line 7, characters 13-16:
It is incompatible with an object of type Base
